// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with false 1`] = `
<Switch
  onValueChange={[MockFunction]}
  trackColor={
    Object {
      "true": "#00A991",
    }
  }
  value={false}
/>
`;

exports[`renders with true 1`] = `
<Switch
  onValueChange={[MockFunction]}
  trackColor={
    Object {
      "true": "#00A991",
    }
  }
  value={true}
/>
`;
